--- a/mystyle.css
+++ b/mystyle.css
@@ -6,26 +6,6 @@ h1 {
 h1 {
   color: #f0a050;
 }
-table, th, td {
-  border: 1px solid black; 
-  border-collapse: collapse;
-}
 th, td {
-  padding: 8px;
-}
-tr:nth-child(even) {
-  background-color: #e6f2ff;
-}
-th.important {
-  color: red;
-}
-p.sample1 {
-  border: double 10px #0000ff;
-}
-p.sample2 {
-  border: inset 10px #ff0000;
-}
-p.sample3 {
-  margin: 30px 30px;padding: 10px;border: 
-  medium solid #ff00ff;
+  border: dashed thick black;
 }
