--- a/mystyle.css
+++ b/mystyle.css
@@ -9,9 +9,9 @@ h1 {
 th, td {
   border: dashed thick black;
 }
-.important { 
-  color: red;
-}
 p.sample1 {border: double 10px #0000ff;}
 p.sample2 {border: inset 10px #ff0000;}
 p.sample3 {margin: 30px 30px;padding: 10px;border: medium solid #ff00ff;}
+th.important {
+  color: red;
+}
